# rc-car-fulltech

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  cpp_notes.md  how2git.md  sdkconfig  sdkconfig.old  sport.md  styleguide.md
components/config/: CMakeLists.txt  json_config.cpp
components/config/include/: json_config.h
components/console_interface/: CMakeLists.txt  console_engine.cpp  usb_transport.cpp
components/console_interface/include/: console_engine.h  console_transport.h  transport_registration.h  usb_transport.h
components/control/: CMakeLists.txt  pid_controller.cpp  vehicle_controller.cpp  vehicle_data.cpp
components/control/include/: pid_controller.hpp  vehicle_controller.hpp  vehicle_data.hpp
components/dashboard/: CMakeLists.txt  dashboard_http_server.cpp
components/dashboard/include/: dashboard_http_server.hpp
components/dashboard/web/: index.html
components/data_pool/: CMakeLists.txt  data_pool.cpp  data_pool.h
components/diagnostics/: CMakeLists.txt  task_stat_driver.cpp  task_stats.cpp
components/diagnostics/include/: task_stat_driver.hpp  task_stat_type.hpp  task_stats.hpp
components/imu/: CMakeLists.txt  imu.cpp
components/motion/: CMakeLists.txt  imu.cpp
components/motion/include/: imu.h  imu.hpp  imu_types.h
components/nav/include/: gps.h
components/profiler/: CMakeLists.txt  measure.cpp
components/profiler/include/: measure.hpp
components/proto_elrs/: CMakeLists.txt  elrs_backend.cpp
components/proto_elrs/include/: elrs_backend.h
components/proto_icm20948/: CMakeLists.txt  icm_20948_driver.cpp
components/proto_nmea/: CMakeLists.txt  M10Q GPS.md  nmea_driver.cpp
components/proto_sbus/: CMakeLists.txt  sbus_driver.cpp
components/rc/: CMakeLists.txt  rclink.cpp  receiver.cpp
components/rc/include/: channel_types.h  (+3 more)
components/servo/: CMakeLists.txt  servo.cpp  servo.h
components/shared/: CMakeLists.txt
components/vdc/: CMakeLists.txt  pid.h  vdc.cpp  vdc.h
main/: CMakeLists.txt  DShotRMT.cpp  dshot_controller.cpp  idf_component.yml  main.cpp  main.txt
main/include/: dshot_controller.hpp
(+3 files in other folders)
